--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,7 @@ jobs:
             pip install --user -r requirements.txt
 
             mkdir -p ~/results/nose
-            nosetests --with-xunit --xunit-file ~/results/nose/results.xml
+            nosetests --with-xunit --xunit-file ~/results/nose.xml
       - store_test_results:
           path: ~/results
 workflows:
