--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,14 +6,20 @@ jobs:
       - image: circleci/ruby:2.6.5
     steps:
       - checkout
+      - restore_cache:
+          key: sandbox-rubyapp-{{ checksum "rubyapp/Gemfile.lock" }}
       - run:
-          name: rspec
+          name: Test
           command: |
             cd rubyapp/
-            bundle install
+            bundle check --path vendor/bundle || bundle install --path vendor/bundle
 
             mkdir -p ~/results
             bundle exec rspec --format progress --format RspecJunitFormatter -o ~/results/rspec.xml
+      - save_cache:
+          key: sandbox-rubyapp-{{ checksum "rubyapp/Gemfile.lock" }}
+          paths:
+            - rubyapp/vendor/bundle
       - store_test_results:
           path: ~/results
 
@@ -22,6 +28,8 @@ jobs:
       - image: circleci/python:3.8.0
     steps:
       - checkout
+      - restore_cache:
+          key: sandbox-opsbot-{{ checksum "opsbot/requirements.txt" }}
       - run:
           name: nosetests
           command: |
@@ -30,6 +38,11 @@ jobs:
 
             mkdir -p ~/results/nose
             nosetests --with-xunit --xunit-file ~/results/nose.xml
+      - save_cache:
+          key: sandbox-opsbot-{{ checksum "opsbot/requirements.txt" }}
+          paths:
+            - ~/.cache/pip
+            - ~/.local
       - store_test_results:
           path: ~/results
 
