Switch toward striaght pip and setuptools.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,5 +9,7 @@ services:
   opsbot:
     build:
       context: opsbot/
+      args:
+        DEVELOPER_MODE: "true"
     volumes:
       - ./opsbot:/opt/app
