--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -68,7 +68,8 @@ jobs:
           name: Zip for Lambda
           command: |
             cd opsbot
-            pip install -r requirements.txt -t .package
+            pip install -t .package -r requirements.txt
+            pip install -t .package .
 
             zip -q9r ~/opsbot-${CIRCLE_SHA1}.zip opsbot
             (cd .package ; zip -q9r ~/opsbot-${CIRCLE_SHA1}.zip .)
