--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -76,8 +76,7 @@ jobs:
           command: unzip -l ~/lambda.zip
       - aws-s3/copy:
           from: ~/lambda.zip
-          to: s3://kylev-utility/opsbot/lambda.zip
-          arguments: --dryrun
+          to: s3://kylev-utility/opsbot/lambda-${CIRCLE_SHA1}.zip
 
   cd:
     docker:
