--- a/opsbot/Dockerfile
+++ b/opsbot/Dockerfile
@@ -4,8 +4,6 @@ WORKDIR /opt/app
 
 # Developer-only style install. Lambda is not Docker-deployed.
 COPY requirements.txt setup.py ./
-RUN \
-        pip install --no-cache-dir -r requirements.txt && \
-        pip install --no-cache-dir -e .
+RUN pip install --no-cache-dir -r requirements.txt '.[development]'
 
 COPY . ./
