--- a/opsbot/Makefile
+++ b/opsbot/Makefile
@@ -2,7 +2,6 @@
 
 package:
 	pip install -t .package -r requirements.txt
-	pip install -t .package .
-	(cd .package ; zip -q9r ~/lambda.zip .)
+	(cd .package ; zip -q9r lambda.zip .)
 
-	zip -q9r ~/lambda.zip opsbot
+	zip -q9r lambda.zip opsbot
