Fix relative path packaging bug.

--- a/opsbot/Makefile
+++ b/opsbot/Makefile
@@ -2,6 +2,6 @@
 
 package:
 	pip install -t .package -r requirements.txt
-	(cd .package ; zip -q9r lambda.zip .)
+	(cd .package ; zip -q9r ../lambda.zip .)
 
 	zip -q9r lambda.zip opsbot
