--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -79,7 +79,7 @@ jobs:
             - opsbot/.package
       - run:
           name: Examine
-          command: unzip -l ~/opsbot/lambda.zip
+          command: unzip -l opsbot/lambda.zip
       - aws-s3/copy:
           from: opsbot/lambda.zip
           to: s3://kylev-utility/opsbot/lambda-${CIRCLE_SHA1}.zip
