--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,6 +5,16 @@ orbs:
   aws-s3: circleci/aws-s3@1.0.12
   docker: circleci/docker@0.5.20
 
+commands:
+  setup_env:
+    steps:
+      - run:
+          name: Setup SSM-derived envionment variables.
+          command: |
+            curl -sSL -o .chamber https://github.com/segmentio/chamber/releases/download/v2.3.2/chamber-v2.3.2-linux-amd64
+            chmod 755 .chamber
+            ./.chamber export --format dotenv circleci/shared/env | sed -e 's/^/export /' >> $BASH_ENV
+
 jobs:
   rubyapp_test:
     docker:
@@ -55,11 +65,13 @@ jobs:
     docker:
       - image: circleci/python:3
     steps:
+      - setup_env
       - setup_remote_docker
       - checkout
       - docker/build:
           image: kylev/sandbox-rubyapp
           path: rubyapp
+      - run: curl -XPOST ${OPSBOT_API_URL}
 
   opsbot_package:
     docker:
