Properly install chamber without leaving anything in the working directory.
Otherwise other steps, like checkout, might complain about a non-empty directory.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,9 +11,9 @@ commands:
       - run:
           name: Setup SSM-derived envionment variables.
           command: |
-            curl -sSL -o .chamber https://github.com/segmentio/chamber/releases/download/v2.3.2/chamber-v2.3.2-linux-amd64
-            chmod 755 .chamber
-            ./.chamber export --format dotenv circleci/shared/env | sed -e 's/^/export /' >> $BASH_ENV
+            sudo curl -sSL -o /usr/local/bin/chamber https://github.com/segmentio/chamber/releases/download/v2.3.2/chamber-v2.3.2-linux-amd64
+            sudo chmod 755 /usr/local/bin/chamber
+            chamber export --format dotenv circleci/shared/env | sed -e 's/^/export /' >> $BASH_ENV
 
 jobs:
   rubyapp_test:
