WIHTOUT_GROUPS to slim down the image.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,8 @@ services:
   rubyapp:
     build:
       context: rubyapp/
+      args:
+        WITHOUT_GROUPS: none
     volumes:
       - ./rubyapp:/opt/app
   opsbot:
