--- a/rubyapp/Dockerfile
+++ b/rubyapp/Dockerfile
@@ -1,8 +1,9 @@
 FROM ruby:2.6.5
 
 WORKDIR /opt/app
-
 COPY Gemfile* ./
-RUN bundle install --jobs 4 --retry 3
+
+ARG WITHOUT_GROUPS="development test"
+RUN bundle install --without ${WITHOUT_GROUPS} --jobs 4 --retry 3
 
 COPY . ./
