--- a/rubyapp/Gemfile
+++ b/rubyapp/Gemfile
@@ -5,6 +5,10 @@ source 'https://rubygems.org'
 gem 'ddtrace'
 
 group :development do
+  gem 'pry'
+end
+
+group :test do
   gem 'rspec'
   gem 'rspec_junit_formatter'
 end
