--- a/rubyapp/Dockerfile
+++ b/rubyapp/Dockerfile
@@ -1,9 +1,14 @@
-FROM ruby:2.6.5
+FROM ruby:2.6.5 AS builder
 
-WORKDIR /opt/app
+WORKDIR /app
 COPY Gemfile* ./
 
 ARG WITHOUT_GROUPS="development test"
-RUN bundle install --without ${WITHOUT_GROUPS} --jobs 4 --retry 3
+RUN bundle install --path vendor/bundle --without ${WITHOUT_GROUPS} --jobs 4 --retry 3
 
 COPY . ./
+
+FROM ruby:2.6.5-slim
+
+WORKDIR /app
+COPY --from=builder /app ./
