This image doesn't much like --deployment.
It seems to prefer a root install.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       context: rubyapp/
       target: builder
       args:
-        WITHOUT_GROUPS: none
+        BUNDLE_ARGS: ""
     volumes:
       - ./rubyapp:/opt/app
   opsbot:
