--- a/rubyapp/Dockerfile
+++ b/rubyapp/Dockerfile
@@ -3,12 +3,18 @@ FROM ruby:2.6.5 AS builder
 WORKDIR /app
 COPY Gemfile* ./
 
-ARG BUNDLE_ARGS="--without development test"
-RUN bundle install --jobs 4 --retry 3 ${BUNDLE_ARGS}
-
+RUN bundle install --jobs 4 --retry 3 --without development test
 COPY . ./
 
-FROM ruby:2.6.5-slim
+FROM ruby:2.6.5 AS dev
+
+WORKDIR /app
+COPY --from=builder /usr/local/bundle /usr/local/bundle/
+COPY --from=builder /app ./
+
+RUN bundle install --jobs 4 --retry 3 --with development test
+
+FROM ruby:2.6.5-slim AS slim
 
 WORKDIR /app
 COPY --from=builder /usr/local/bundle /usr/local/bundle/
