What's life without a little destruction?

--- a/tf/Makefile
+++ b/tf/Makefile
@@ -1,9 +1,12 @@
-.PHONY: apply fmt init plan
+.PHONY: apply destroy fmt init plan
 
 TF = terraform
 
 apply:
 	$(TF) apply
+
+destroy:
+	$(TF) destroy
 
 fmt:
 	$(TF) fmt
